--- a/www/index.html
+++ b/www/index.html
@@ -2782,18 +2782,32 @@
         GlobalState.prototype.destroy_editors = function (name) {
 
             window.edit_html_editor.toTextArea();
+            $(window.edit_html_editor.getTextArea()).remove();
             window.edit_javascript_editor.toTextArea();
+            $(window.edit_javascript_editor.getTextArea()).remove();
             window.create_html_editor.toTextArea();
+            $(window.create_html_editor.getTextArea()).remove();
             window.create_javascript_editor.toTextArea();
+            $(window.create_javascript_editor.getTextArea()).remove();
 
             for (var i = 0; i < this.context_codemirrors.length; i++)
                 this.context_codemirrors[i].toTextArea();
+            for (var i = 0; i < this.context_codemirrors.length; i++)
+                $(this.context_codemirrors[i].getTextArea()).remove();
+
             for (var i = 0; i < this.program_codemirrors.length; i++)
                 for (var j = 0; j < this.program_codemirrors[i].length; j++)
-                    this.program_codemirrors[i][j].toTextArea()
+                    this.program_codemirrors[i][j].toTextArea();
+            for (var i = 0; i < this.program_codemirrors.length; i++)
+                for (var j = 0; j < this.program_codemirrors[i].length; j++)
+                    $(this.program_codemirrors[i][j].getTextArea()).remove();
+
             for (var i = 0; i < this.stage_codemirrors.length; i++)
                 for (var j = 0; j < this.stage_codemirrors[i].length; j++)
                     this.stage_codemirrors[i][j].toTextArea();
+            for (var i = 0; i < this.stage_codemirrors.length; i++)
+                for (var j = 0; j < this.stage_codemirrors[i].length; j++)
+                    $(this.stage_codemirrors[i][j].getTextArea()).remove();
         }
 
         GlobalState.prototype.refresh_static_editors = function (name) {
