--- a/www/index.html
+++ b/www/index.html
@@ -2762,7 +2762,7 @@
             this.pipeline.programs = [];
             this.pipeline.stages = [];
 
-            $(window.location.hash + "_algorithm_context").html("");
+            $(window.location.hash + "_algorithm_contexts").html("");
             $(window.location.hash + "_algorithm_programs").html("");
             $(window.location.hash + "_algorithm_stages").html("");
 
