--- a/www/edit.html
+++ b/www/edit.html
@@ -30,119 +30,7 @@
                     class="btn btn-outline-success mx-auto">Download</button>
             </h1>
             <br>
-            <h1 class="read_only"
-                style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                <a>Algorithm Information</a>
-            </h1>
-            <h1 onclick="profileClicked(algorithm.owner)" class="read_only"
-                style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center; color:#0f0;">
-                        <a>Algorithm Title:</a>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <input disabled id="edit_algorithm_title" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
-                            placeholder="Algorithm name..." value=""></input>
-                        <br>
-                        <br>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center; color:#0f0;">
-                        <a>Algorithm Author:</a>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <input disabled id="edit_algorithm_author" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
-                            placeholder="Author name..." value=""></input>
-                        <br>
-                        <br>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center; color:#0f0;">
-                        <a>Date Created:</a>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <input disabled id="edit_algorithm_created" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
-                            placeholder="Date created..." value=""></input>
-                        <br>
-                        <br>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center; color:#0f0;">
-                        <a>Date Updated:</a>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <input disabled id="edit_algorithm_edited" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
-                            placeholder="Date updated..." value=""></input>
-                        <br>
-                        <br>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center; color:#0f0;">
-                        <a>View Count:</a>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <input disabled id="edit_algorithm_views" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
-                            placeholder="View count..." value=""></input>
-                        <br>
-                        <br>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center; color:#0f0;">
-                        <a>Vote Tally:</a>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <input disabled id="edit_algorithm_votes" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
-                            placeholder="Vote tally..." value=""></input>
-                        <br>
-                        <br>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center; color:#0f0;">
-                        <a>Total Comments:</a>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <input disabled id="edit_algorithm_comments" style="background: none; border: none !important; width:inherit; text-align:center; color:#fff;"
-                            placeholder="Total comments..." value=""></input>
-                        <br>
-                        <br>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="align-self: center; color:#0f0;">
-                        <a>Algorithm Description:</a>
-                        <br>
-                        <br>
-                    </div>
-                    <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                        <textarea id="edit_description" rows="8" style="background: none; border: none !important; text-align:left; color:#fff;"
-                            placeholder="Algorithm description...""></textarea>
-                    </div>
-                </div>
-            </h1>
-            <h1 class="read_only"
-                style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                <a style="color:#FFF!important; ">Comments:</a>
-            </h1>
+            <!---#ALGORITHM_INFORMATION#--->
         </div>
         <div class="col-0 col-sm-0 col-md-0 col-lg-1">
         </div>
