--- a/www/index.html
+++ b/www/index.html
@@ -562,7 +562,6 @@
                     fetch('https://www.MetaHumanity.xyz/algorithms/' + algorithm + '.json')
                         .then(function (response) {
                             response.json().then(function (val) {
-                                this.set_ui_algorithm(val);
                                 this.preview_algorithm(algorithm);
                             }.bind(this))
                                 .catch(function (err) {
@@ -594,7 +593,6 @@
                         .then(function (response) {
                             response.json().then(function (val) {
                                 val.name = "Fork of " + val.name;
-                                this.set_ui_algorithm(val);
                                 this.preview_algorithm(algorithm);
                             }.bind(this))
                                 .catch(function (err) {
@@ -1271,11 +1269,34 @@
                 console.log("Error! No iframe loaded.");
         }
 
+        
+        window.addEventListener("message", (event) => {
+        // Do we trust the sender of this message?  (might be
+        // different from what we originally opened, for example).
+        // if (event.origin !== "http://example.com")
+        //     return;
+            try{
+                var message = JSON.parse(event.data);
+
+                if(message.fetch_algorithm)
+                {
+                    this.set_ui_algorithm(message.proto);
+                    $('.loading-indicator').hide();
+                    this.hide_popovers();
+                }
+                if(message.save_algorithm)
+                {
+                    
+                }
+            }
+
+        // event.source is popup
+        // event.data is "hi there yourself!  the secret response is: rheeeeet!"
+        }, false);
         GlobalState.prototype.preview_algorithm = function (algorithm) {
             this.preview_iframe = document.getElementById(window.location.hash.substring(1) + "_preview_iframe");
             this.preview_iframe.onload = function () {
-                $('.loading-indicator').hide();
-                this.hide_popovers();
+                this.preview_iframe.contentWindow.postMessage(JSON.stringify({ fetch_algorithm: true }), '*');
             }.bind(this);
             this.preview_iframe.src = "canvas.html?algorithm=" + algorithm;
         }
