--- a/www/index.html
+++ b/www/index.html
@@ -1289,6 +1289,10 @@
                     
                 }
             }
+            catch(e)
+            {
+                console.log(e);
+            }
 
         // event.source is popup
         // event.data is "hi there yourself!  the secret response is: rheeeeet!"
