--- a/www/edit.html
+++ b/www/edit.html
@@ -29,6 +29,8 @@
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.download_algorithm()"
                     class="btn btn-outline-success mx-auto">Download</button>
             </h1>
+            <br>
+            <!---#ALGORITHM_COMMENTS#--->
         </div>
         <div class="col-0 col-sm-0 col-md-0 col-lg-1">
         </div>
