--- a/www/edit.html
+++ b/www/edit.html
@@ -21,21 +21,21 @@
                 </div>
                 <br>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.compile_algorithm()"
-                    class="btn btn-outline-primary mx-auto">Compile</button>
+                    class="btn btn-outline-success mx-auto">Compile</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button"
                     onclick="state.fork_algorithm(state.get_ui_algorithm().name)"
-                    class="btn btn-outline-primary mx-auto">Fork</button>
+                    class="btn btn-outline-success mx-auto">Fork</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button"
                     onclick="state.goto_algorithm_preview(state.get_ui_algorithm().name.toLowerCase().replaceAll(' ', '_'))"
-                    class="btn btn-outline-primary mx-auto">Preview</button>
+                    class="btn btn-outline-success mx-auto">Preview</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.save_algorithm()"
                     class="owned-content logged_in_content btn btn-outline-success mx-auto">Save</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.download_algorithm()"
-                    class="btn btn-outline-primary mx-auto">Download</button>
+                    class="btn btn-outline-success mx-auto">Download</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.dislike()"
                     class="btn btn-outline-success mx-auto">Like</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.like()"
-                    class="btn btn-outline-danger mx-auto">Dislike</button>
+                    class="btn btn-outline-danger mx-auto">Hate</button>
             </h1>
             <br>
             <!---#ALGORITHM_COMMENTS#--->
