--- a/www/edit.html
+++ b/www/edit.html
@@ -32,10 +32,10 @@
                     class="owned-content logged_in_content btn btn-outline-success mx-auto">Save</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.download_algorithm()"
                     class="btn btn-outline-success mx-auto">Download</button>
-                <button style="border-color: pink; background-color: rgba(0,0,0,.75);" type="button" onclick="state.like()"
+                <button style="border-color: pink !important; background-color: rgba(0,0,0,.75);" type="button" onclick="state.like()"
                     class="btn btn-outline-success mx-auto">Love</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.hate()"
-                    class="btn btn-outline-danger mx-auto">Hate</button>
+                    class="btn btn-outline-warning mx-auto">Hate</button>
             </h1>
             <br>
             <!---#ALGORITHM_COMMENTS#--->
