--- a/www/index.html
+++ b/www/index.html
@@ -2939,6 +2939,12 @@
         GlobalState.prototype.lastPage = function () {
             this.coming_soon();
         }
+        GlobalState.prototype.love = function () {
+            this.coming_soon();
+        }
+        GlobalState.prototype.hate = function () {
+            this.coming_soon();
+        }
 
         GlobalState.prototype.browse_edit = function (name) {
             setQueryVariable("algorithm", name.toLowerCase().replaceAll(" ", "_"));
