--- a/www/create.html
+++ b/www/create.html
@@ -23,7 +23,7 @@
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.save_algorithm()"
                     class="btn btn-outline-success mx-auto">Save</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.download_algorithm()"
-                    class="btn btn-outline-success mx-auto">Download</button>
+                    class="btn btn-outline-primary mx-auto">Download</button>
             </h1>
         </div>
         <div class="col-0 col-sm-0 col-md-0 col-lg-1">
