--- a/www/edit.html
+++ b/www/edit.html
@@ -27,12 +27,12 @@
                     class="btn btn-outline-success mx-auto">Fork</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button"
                     onclick="state.goto_algorithm_preview(state.get_ui_algorithm().name.toLowerCase().replaceAll(' ', '_'))"
-                    class="btn btn-outline-success mx-auto">Preview</button>
+                    class="btn btn-outline-primary mx-auto">Preview</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.save_algorithm()"
                     class="owned-content logged_in_content btn btn-outline-success mx-auto">Save</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.download_algorithm()"
-                    class="btn btn-outline-success mx-auto">Download</button>
-                <button style="border-color: pink !important; background-color: rgba(0,0,0,.75);" type="button" onclick="state.like()"
+                    class="btn btn-outline-primary mx-auto">Download</button>
+                <button style="border-color: pink !important; background-color: rgba(0,0,0,.75);" type="button" onclick="state.love()"
                     class="btn btn-outline-success mx-auto">Love</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.hate()"
                     class="btn btn-outline-warning mx-auto">Hate</button>
