--- a/www/index.html
+++ b/www/index.html
@@ -3005,7 +3005,7 @@
 
         // event.source is popup
         // event.data is "hi there yourself!  the secret response is: rheeeeet!"
-        }/bind(state), false);
+        }.bind(state), false);
 
         window.onload = on_resources_loaded;
     </script>
