--- a/www/index.html
+++ b/www/index.html
@@ -2976,8 +2976,8 @@
         window.addEventListener("message", function(event) {
         // Do we trust the sender of this message?  (might be
         // different from what we originally opened, for example).
-        // if (event.origin !== "http://example.com")
-        //     return;
+        if (event.origin.equalsIgnoreCase("https://www.metahumanity.xyz"))
+            return;
         console.log(event.origin);
             try{
                 var message = JSON.parse(event.data);
