--- a/www/index.html
+++ b/www/index.html
@@ -357,18 +357,17 @@
                 }.bind(this));
             }
             else if (proto.type == Message.Type.HALT) {
-                $("#popover_header" + (this.popover_counter-1)).html(proto.message);
-                $("#popover_message" + (this.popover_counter-1)).html(proto.details);
+                $("#popover_header" + (this.popover_counter - 1)).html(proto.message);
+                $("#popover_message" + (this.popover_counter - 1)).html(proto.details);
             }
             else if (proto.type == Message.Type.PROGRESS) {
                 this.show_page(pages.PROCESSING, proto.message, proto.details);
             }
-            else if(proto.type == Message.Type.SAVE_ALGORITHM){
+            else if (proto.type == Message.Type.SAVE_ALGORITHM) {
                 this.hide_popovers();
                 var success = proto.algorithm ? true : false;
-                if(success)
-                {
-                    if(window.location.hash == pages.CREATE)
+                if (success) {
+                    if (window.location.hash == pages.CREATE)
                         this.show_page(pages.EDIT);
                     this.set_ui_algorithm(proto.algorithm);
                     this.show_page(pages.PROCESSING, proto.message, proto.details, true);
@@ -591,8 +590,8 @@
                     var algorithm_query_parameter = getQueryVariable("fork");
                     var algorithm = algorithm_query_parameter ? algorithm_query_parameter : "default";
                     this.show_page(pages.PROCESSING, "Fetching algorithm...", "Please be patient.", false);
-                    $('.loading-indicator').show()     
-                    this.preview_algorithm(algorithm);               
+                    $('.loading-indicator').show()
+                    this.preview_algorithm(algorithm);
                     break;
                     break;
                 case pages.DELETE_ACCOUNT:
@@ -2845,8 +2844,7 @@
         GlobalState.prototype.save_algorithm = function () {
             if (!this.logged_in)
                 this.show_page(pages.CLIENT_ERROR, "Invalid credentials!", "Please log in or create an account first!", true)
-            else
-            {
+            else {
                 this.show_page(pages.PROCESSING, "Saving algorithm.", "Please wait...", false);
                 this.preview_iframe = document.getElementById(window.location.hash.substring(1) + "_preview_iframe");
                 this.preview_iframe.contentWindow.postMessage(JSON.stringify({ save_algorithm: true }), '*');
@@ -2971,27 +2969,24 @@
                 }.bind(this))
         }
         state = new GlobalState();
-        
-        
-        window.addEventListener("message", function(event) {
-        // Do we trust the sender of this message?  (might be
-        // different from what we originally opened, for example).
-        if (event.origin.equalsIgnoreCase("https://www.metahumanity.xyz"))
-            return;
-        console.log(event.origin);
-            try{
+
+
+        window.addEventListener("message", function (event) {
+            // Do we trust the sender of this message?  (might be
+            // different from what we originally opened, for example).
+            if (event.origin.toLowerCase() != "https://www.metahumanity.xyz")
+                return;
+            try {
                 var message = JSON.parse(event.data);
 
-                if(message.fetch_algorithm)
-                {
-                    if(window.location.hash == pages.CREATE)
-                        message.proto.name = "Fork of "+message.proto.name;
+                if (message.fetch_algorithm) {
+                    if (window.location.hash == pages.CREATE)
+                        message.proto.name = "Fork of " + message.proto.name;
                     this.set_ui_algorithm(message.proto);
                     $('.loading-indicator').hide();
                     this.hide_popovers();
                 }
-                if(message.save_algorithm)
-                {
+                if (message.save_algorithm) {
                     this.send(Message.encode({
                         type: Message.Type.SAVE_ALGORITHM,
                         auth: {
@@ -3002,13 +2997,12 @@
                     }).finish(), true)
                 }
             }
-            catch(e)
-            {
+            catch (e) {
                 console.log(e);
             }
 
-        // event.source is popup
-        // event.data is "hi there yourself!  the secret response is: rheeeeet!"
+            // event.source is popup
+            // event.data is "hi there yourself!  the secret response is: rheeeeet!"
         }.bind(state), false);
 
         window.onload = on_resources_loaded;
