--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
             href="#logout">Log Out</a>
         <a id="reset_button" style="display: none;" onclick="state.collapse_nav();" href="#reset">Reset</a>
         <a id="request_button" style="display: none;" onclick="state.collapse_nav();" href="#request">Request</a>
-        <a href="javascript:void(0);" class="icon" onclick="state.toggle_nav()"">
+        <a href="javascript:void(0);" class="icon" onclick="state.toggle_nav()">
             <div class=" bar"></div>
     <div class="bar"></div>
     <div class="bar"></div>
